--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
   <title>My Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
@@ -14,6 +14,64 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+
+  <div class="container">
+    
+  <header>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Portfolio</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header> 
+  
+  <section class="top-content">
+    <div class="gradient">
+  <img src="images/Tamaaj.png">
+  <h1 class="myName">Tamaaj Nelson</h1>
+ <h3> Unemployed to Web Developer! </h3>
+
+<button style="
+width: 200px;
+height: 30px;
+border-radius: 9px;
+color: white;
+background: #001696;
+font-size: 15px;
+margin: 10px;
+">
+    Make Magic Here
+    </button>
+
+<p> My dream has always been to create apps that help people!</p>
+
+  </div>
+  </section>
+
+  <section class="middle-content">
+    <div class="text-container">
+    <h2>Listen Up...</h2>
+    </div>
+    <div class="text-container">
+    <h2>Stuff I'm Good At:</h2>
+    </div> 
+  </section>
+
+  <section class="bottom-content">
+    <div class="text-container">
+<h3>Work History</h3>
+    </div>
+  </section>
+
+
+<footer>
+<p>
+  Copyright Awesomeness 2018
+</p>
+
+</footer>
+
+</div>
 </body>
 </html>
